// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Information model helpers creates article info state from XML with CC-BY-4 1`] = `
ArticleInformation {
  "_id": "unique_id",
  "articleDOI": "10.7554/eLife.00104",
  "articleType": " Insight ",
  "copyrightStatement": "© 2019, Last name 1",
  "dtd": "1.2",
  "elocationId": "e00104",
  "licenseText": Object {
    "doc": Object {
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "doc",
    },
    "selection": Object {
      "anchor": 1,
      "head": 1,
      "type": "text",
    },
  },
  "licenseType": "CC-BY-4",
  "publicationDate": "2019-11-30",
  "publisherId": "00104",
  "subjects": Array [
    "Cell Biology",
    "Genetics and Genomics",
  ],
  "volume": "8",
}
`;

exports[`Article Information model helpers creates article info state from XML with CC0 1`] = `
ArticleInformation {
  "_id": "unique_id",
  "articleDOI": "10.7554/eLife.00104",
  "articleType": " Insight ",
  "copyrightStatement": "",
  "dtd": "1.2",
  "elocationId": "e00104",
  "licenseText": Object {
    "doc": Object {
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "doc",
    },
    "selection": Object {
      "anchor": 1,
      "head": 1,
      "type": "text",
    },
  },
  "licenseType": "CC0",
  "publicationDate": "2019-11-30",
  "publisherId": "00104",
  "subjects": Array [
    "Cell Biology",
    "Genetics and Genomics",
  ],
  "volume": "8",
}
`;
